// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThemeInner is high contrast mode enabled: false 1`] = `
<DocumentFragment>
  <mock-themeprovider
    applyto="body"
    theme="[object Object]"
  >
    <mock-fluentprovider
      theme="[object Object]"
    >
      <mock-bodyclassmodifier
        classnames="theme-switcher"
        deps="[object Object]"
      />
    </mock-fluentprovider>
  </mock-themeprovider>
</DocumentFragment>
`;

exports[`ThemeInner is high contrast mode enabled: false: BodyClassModifier props 1`] = `
{
  "classNames": [
    "theme-switcher",
  ],
  "deps": {
    "documentManipulator": [typemoq mock object],
    "storeActionMessageCreator": null,
    "storesHub": null,
  },
}
`;

exports[`ThemeInner is high contrast mode enabled: true 1`] = `
<DocumentFragment>
  <mock-themeprovider
    applyto="body"
    theme="[object Object]"
  >
    <mock-fluentprovider
      theme="[object Object]"
    >
      <mock-bodyclassmodifier
        classnames="theme-switcher,high-contrast-theme"
        deps="[object Object]"
      />
    </mock-fluentprovider>
  </mock-themeprovider>
</DocumentFragment>
`;

exports[`ThemeInner is high contrast mode enabled: true: BodyClassModifier props 1`] = `
{
  "classNames": [
    "theme-switcher",
    "high-contrast-theme",
  ],
  "deps": {
    "documentManipulator": [typemoq mock object],
    "storeActionMessageCreator": null,
    "storesHub": null,
  },
}
`;
